--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,6 @@ add_executable(${PROJECT_NAME}
   src/main.cpp
   src/Renderer.cpp 
   src/Hittable.cpp
+  src/Camera.cpp 
 )
 target_link_libraries(${PROJECT_NAME} PRIVATE SDL3-shared)
